[ 챗봇 > 서비스 구현 ] 1. 뉴스 큐레이션 에이전트 처리 로직 개선 및 CURATION_SUB_TY 추가 2. 에이전트 서브 설정 조회 메서드 리팩토링 3. WebSocket을 통한 뉴스 추천 전달 로직에 추가 설정 파라미터 적용 4. RSS 피드 매핑 생성 로직 개선 및 관련 메서드 수정 5. 뉴스 수집 로직에서 기사 출처 및 요약 최대 길이 설정 추가